# Zuse

./: LICENSE  README.md  interpreter.py  zuse_studio.py
Zuse 7.3/: CHANGELOG.md  README.md  RoadmapNeu.md  Zuse_Handbuch_v7.3.md  add_language.py  builtin_i18n.py  create_icon.py  csharp_backend.py  debugger.py  error_hints.py  error_i18n.py  error_messages.py  interpreter.py  ir.py  java_backend.py  language_loader.py  lexer.py  main.py  maler_web.py  optimizer.py  parser.py  pyproject.toml  semantic_analyzer.py  spielfeld.py  spielfeld_web.py  studio_i18n.py  symbol_table.py  transpiler.py  visitor.py  zpkg.py  zpkg_core.py  zuse.spec  zuse_cli.py  zuse_debug.py  zuse_studio.py
Zuse 7.3/Zuse Programme/: DerMaler.zuse  LePeintre.zuse  चित्रकार.zuse
Zuse 7.3/backends/: __init__.py  base_backend.py  csharp_backend.py  java_backend.py  javascript_backend.py  python_backend.py  wasm_backend.py
Zuse 7.3/beispiele/: 01_hallo_welt.zuse  02_variablen.zuse  03_rechner.zuse  04_zahlenraten.zuse  05_fizzbuzz.zuse  06_primzahlen.zuse  07_fibonacci.zuse  08_fakultaet.zuse  09_sortieren.zuse  10_suchen.zuse  11_statistik.zuse  12_tierwelt.zuse  13_bankkonto.zuse  14_inventar.zuse  15_quiz.zuse
Zuse 7.3/bibliothek/: english.zuse  francais.zuse  hindi.zuse  italiano.zuse  zhongwen.zuse
Zuse 7.3/docs/: architektur.md  beispiele.md  referenz.md  spielfeld_api.md  sprachvergleich.md  tutorial.md
Zuse 7.3/lsp/: __main__.py  zuse_server.py
Zuse 7.3/sprach_tests/: de_1_grundlagen.zuse  de_2_bibliotheken.zuse  en_1_basics.zuse  en_2_libraries.zuse  es_1_basico.zuse  es_2_bibliotecas.zuse  fr_1_bases.zuse  fr_2_bibliotheques.zuse  hi_1_aadhar.zuse  hi_2_pustakalay.zuse  hi_native_test.zuse  it_1_base.zuse  it_2_librerie.zuse  pt_1_basico.zuse  pt_2_bibliotecas.zuse  run_all.py  zh_1_jichu.zuse  zh_2_kubaozang.zuse  zh_native_test.zuse
Zuse 7.3/sprachen/: francais.json
Zuse 7.3/tests/: conftest.py  test_beispiele.py  test_builtin_i18n.py  test_debugger.py  test_edge_cases.py  test_hindi_lexer.py  test_ir.py  test_liste.py  test_logische_operatoren.py  test_lsp.py  test_mathe.py  test_mehrsprachig.py  test_optimizer.py  test_symbol_table.py  (+5 more)
(+59 files in other folders)
